fix sidebar overflowing

--- a/scss/darkroom-core/_base.scss
+++ b/scss/darkroom-core/_base.scss
@@ -9,6 +9,9 @@ html, body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
 }
+body {
+  overflow-x: hidden;
+}
 
 @media (min-width: 1800px) {
   .container {
